index.css
@font-face {
    font-family: 'open-sans';
    src: url(assets/Open_Sans/OpenSans-VariableFont_wdth\,wght.ttf);
}

* {
    font-family: 'open-sans', sans-serif;
    font-variation-settings: "wght" 300;
}

#nav {
    z-index: 10;
    position: fixed;
    top: 20px;
    left: 20px;
}

#nav-content {
    background-color: #FAFAFF;
    border-radius: 7px;
}

.nav-item {
    font-size: 1.2vw;
    display: none;
    /* margin-bottom: 10px; */
    padding: 5px 5px 5px 0;
    text-decoration: none;
    color: #040406;
    border-radius: inherit;
    padding-left: 10px;
}

a:hover.nav-item {
    background-color: lightgray;
} 

p {
    font-size: 1vw;
    margin: 5px 0;
}

.dark-colored-section {
    background-color: #2c2a4a;
    color: #FAFAFF;
}

.light-colored-section {
    background-color: #e4d9ff;
    color: #040406;
}

.light-colored-section h1 {
    font-size: 72px; 
    text-align: center;
    margin-bottom: 40px;
}

.container-fluid {
    padding: 3% 15% 3% 15%;
    height: 100vh;
}

#skills {
    height: 110vh;
}

.cover-photo, h1.home {
    margin-top: 100px;
}

@keyframes fade-in {
    0% {
        opacity: 0%;
    } 100% {
        opacity: 100%;
    }
}

h1.home {
    opacity: 0%;
    font-size: 4vw; 
    animation: fade-in 1s forwards;
    width: 100%;
}

.cover-photo {
    display: block;
    margin-left: auto;
    margin-right: auto;
    opacity: 0%;
    height: auto;
    width: 70%;
    min-width: 50px;
    border-radius: 50px 50px 50px 50px;
    /* name_of_animation | duration | fill-mode | delay */
    animation: fade-in 1s forwards .5s;
}

.slideshow-container {
    max-width: 1000px;
    position: relative;
    margin: auto;
}

.mySlides {
    display: none;
}

.prev, .next {
    cursor: pointer;
    position: absolute;
    top: 50%;
    width: auto;
    margin-top: -22px;
    padding: 25px 20px;
    color: white;
    font-weight: bold;
    font-size: 18px;
    transition: 0.6s ease;
    border-radius: 0 3px 3px 0;
    user-select: none;
    background-color: rgba(0,0,0,0.8);
}

.next {
    right: 0;
    border-radius: 3px 0 0 3px;
}

.prev:hover, .next:hover {
    background-color: rgba(0,0,0,1);
}

.caption {
    /* color: black; */
    font-size: 1vw;
    padding: 15px 12px;
    position: absolute;
    /* bottom: 12px; */
    width: 100%;
    text-align: center;
}

.caption a {
    text-decoration: none;
}

#dots-row {
    margin-top: 20px;
}

.dot {
    cursor: pointer;
    height: 10px;
    width: 45px;
    margin: 40px 2px;
    background-color: #bbb;
    /* border-radius: 10%; */
    display: inline-block;
    transition: background-color 0.6s ease;
}

.active, .dot:hover {
    background-color: #717171;
}

.fade {
    animation-name: fade;
    animation-duration: 1.5s;
    animation-fill-mode: forwards;
}

@keyframes fade {
    from {opacity: .6}
    to {opacity: 1}
}

h2.portfolio-footer {
    text-align: center;
}

/* Also used for the Skills header */
h1.contact-header { 
    margin-bottom: 100px;
}

h1.skills-header {
    text-align: center;
    font-size: 72px;
}

#languages-frameworks-btn-group {
    margin: auto;
    width: 35%;
}

#skills-in-langauges {
    height: 100px;
}

#skills-in-frameworks {
    height: 100px;
    display: none;
}

#other-skills {
    height: 100px;
    display: none;
}

.about-me-body {
   margin: 0 auto 10px auto;
}

#about-me-content {
    opacity: 0;
}

#book-reading {
    margin-top: 25px;
    height: 200px;
    width: auto;
}
/* Code for flipping a card */
.flip-card {
    background-color: transparent;
    width: 150px;
    height: 200px;
    perspective: 1000px;
}

.flip-card-inner {
    position: relative;
    width: 100%;
    height: 100%;
    text-align: center;
    transition: transform 0.8s;
    transform-style: preserve-3d;
}

.flip-card:hover .flip-card-inner {
    transform: rotateY(180deg);
}

.flip-card-front, .flip-card-back {
    position: absolute;
    width: 100%;
    height: 100%;
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
}

.flip-card-back {
    transform: rotateY(180deg);
}

/* Code for making the vinyl rotate forever */

.rotate {
    animation: rotation 3s infinite linear;
}

#simple-book {
    display: none;
    height: auto;
}

#spotify-album-widget {
    margin-top: 30px;
    border-radius: 12px;
    width: 100%;
    height: 350px;
}

#ah-book {
    width: 25%;
    height: auto;
}
@keyframes rotation {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}

#vinyl-image {
    margin-top: 25px;
    margin-bottom: 25px;
    height: 200px;
    width: auto;
}

#footer {
    text-align: center;
    margin-top: 100px;
}

.social-icon {
    height: 80px;
    width: auto;
}

#user-email {
    margin-top: 10px;
}

.comments-form-label {
    margin-top: 40px;
}

#comments-area {
    margin-top: 10px;
}

.contact-me-row {
    height: 410px;
}

.contact-info {
    padding-left: 200px;
}

.invalid-email {
    border-color: red;
    border-width: 3px;
}

#submission-message {
    font-size: 20px;
    color: #e4d9ff;
    margin-top: 15px;
    display: none;
    height: 100px;
    width: auto;
}

li {
    font-size: 20px;
}

#simple-skills {
    display: none;
}

#simple-portfolio {
    display: none;
}

#email {
    font-size: 3vh;
}

@media (prefers-reduced-motion: no-preference) {
    .fade-in {
        animation: fade-in 1.5s .5s forwards;
    }
}

/* @media used to adjust the size of elements if website is viewed on phone */
@media screen and (max-width: 1100px) {

    #nav {
        display: none;
    }

    h1.home {
        font-size: 32px;
        text-align: center;
    }

    h2 {
        font-size: 4.5vh;
    }

    .cover-photo {
        margin-top: 50px;
        width: 70%;
        height: auto;
    }

    h1.about-me-header, h1.skills-header, h1.portfolio-header {
        font-size: 6vh;
        margin-bottom: 10px;
    }

    #portfolio {
        height: 140vh;
    }

    p {
        font-size: 1.75vh;
    }

    #vinyl-image {
        width: 40%;
        height: auto;
        margin-top: 10px;
    }

    #about-me {
        align-items: center;
        text-align: center;
        height: 175vh;
    }
    
    .col-lg-6#form-column {
        display: none;
    }

    .contact-info {
        padding-left: 0;
        align-items: center;
    }

    #footer {
        display: none;
    }

    #skills-in-languages, #skills-in-frameworks, #skills-button {
        display: none;
    }

    li {
        font-size: 3vh;
    }

    #simple-skills {
        display: block;
    }

    .slideshow-container, h2.portfolio-footer, #dots-row {
        display: none;
    }

    #simple-portfolio {
        display: block;
        text-align: center;
    }

    h2.simple-portfolio {
        font-size: 3vh;
    }

    #simple-portfolio img {
        margin-bottom: 10%;
        height: 20vh;
        width: 70vw;
    }

    h5 {
        font-size: 2.5vh;
    }

    h3 {
        font-size: 2.5vh;
    }

    #email {
        font-size: 4.5vw;
    }

    #spotify-album-widget {
        height: 50%;
    }
}

